portal/pipeline/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-pipeline
spec:
  selector:
    matchLabels:
      app: portal-pipeline
  template:
    metadata:
      labels:
        app: portal-pipeline
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - c1-203.tokyotech.org # ConoHa cluster
                      - arc321.tokyotech.org # sakura cluster
      containers:
        - name: portal-pipeline
          image: ghcr.io/traptitech/pipeline:latest@sha256:8f29397f129441796ab86efb7ae98be6f9640fca381e3add47629aa5a33625cc
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: token-private
              mountPath: /keys/pri.key
              subPath: traP_token_rsa
              readOnly: true
            - name: token-public
              mountPath: /keys/pub.key
              subPath: traP_token_rsa.pub
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: token-private
          secret:
            secretName: trap-token-private
        - name: token-public
          secret:
            secretName: trap-token-public
