portal/pipeline/ingress-route-trapgames.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portal-pipeline

spec:
  entryPoints:
    - websecure
  tls:
    secretName: trap-games-tls
  routes:
    - kind: Rule
      match: Host(`portal.trap.games`) && Path(`/pipeline`)
      services:
        - namespace: portal
          kind: Service
          name: portal-pipeline
          port: 8102
          scheme: http
          strategy: RoundRobin
          weight: 1
