portal/pipeline/ingress-route-traptitech.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portal-pipeline-traptitech

spec:
  entryPoints:
    - websecure
  tls:
    secretName: trapti-tech-tls
  routes:
    - kind: Rule
      match: Host(`portal.trapti.tech`) && Path(`/pipeline`)
      services:
        - namespace: portal
          kind: Service
          name: portal-pipeline
          port: 8102
          scheme: http
          strategy: RoundRobin
          weight: 1
